DRC/include/ll/Core.h

LLEXPORT ЛЛЗначение LLBuildNSWAdd(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS,  const char *Name);
LLEXPORT ЛЛЗначение LLBuildNUWAdd(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS, const char *Name);
LLEXPORT ЛЛЗначение LLBuildNSWSub(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS,  const char *Name);
LLEXPORT ЛЛЗначение LLBuildNUWSub(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS,  const char *Name);
LLEXPORT ЛЛЗначение LLBuildNSWMul(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS,   const char *Name);
LLEXPORT ЛЛЗначение LLBuildNUWMul(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS,  const char *Name);
LLEXPORT ЛЛЗначение LLBuildURem(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS,  const char *Name);
LLEXPORT ЛЛЗначение LLBuildSRem(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS, const char *Name);
LLEXPORT ЛЛЗначение LLBuildFRem(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS, const char *Name);
LLEXPORT ЛЛЗначение LLBuildShl(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS, const char *Name);
LLEXPORT ЛЛЗначение LLBuildLShr(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS, const char *Name);
LLEXPORT ЛЛЗначение LLBuildAShr(ЛЛПостроитель B, ЛЛЗначение LHS, ЛЛЗначение RHS, const char *Name);
LLEXPORT ЛЛЗначение LLBuildNSWNeg(ЛЛПостроитель B, ЛЛЗначение V,
                             const char *Name) ;
LLEXPORT ЛЛЗначение LLBuildNUWNeg(ЛЛПостроитель B, ЛЛЗначение V,
                             const char *Name);
LLEXPORT ЛЛЗначение LLBuildGEP(ЛЛПостроитель B, ЛЛЗначение Pointer,
                          ЛЛЗначение *Indices, unsigned NumIndices,
                          const char *Name);
LLEXPORT ЛЛЗначение LLBuildGEP2(ЛЛПостроитель B, ЛЛТип Ty,
                           ЛЛЗначение Pointer, ЛЛЗначение *Indices,
                           unsigned NumIndices, const char *Name);
LLEXPORT ЛЛЗначение LLBuildInBoundsGEP(ЛЛПостроитель B, ЛЛЗначение Pointer,
                                  ЛЛЗначение *Indices, unsigned NumIndices,
                                  const char *Name);
LLEXPORT ЛЛЗначение LLBuildInBoundsGEP2(ЛЛПостроитель B, ЛЛТип Ty,
                                   ЛЛЗначение Pointer, ЛЛЗначение *Indices,
                                   unsigned NumIndices, const char *Name);
LLEXPORT ЛЛЗначение LLBuildStructGEP(ЛЛПостроитель B, ЛЛЗначение Pointer,
                                unsigned Idx, const char *Name) ;
LLEXPORT ЛЛЗначение LLBuildStructGEP2(ЛЛПостроитель B, ЛЛТип Ty,
                                 ЛЛЗначение Pointer, unsigned Idx,
                                 const char *Name) ;
// Различные инструкции 

LLEXPORT ЛЛЗначение LLBuildPhi(ЛЛПостроитель B, ЛЛТип Ty, const char *Name);