DRC/src/ll/Core.d


/* Арифметика */
ЛЛЗначение ЛЛСтройСложи(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                          ткст0 имя);
ЛЛЗначение LLBuildNSWAdd(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                             ткст0 имя);
ЛЛЗначение LLBuildNUWAdd(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                             ткст0 имя);
ЛЛЗначение ЛЛСтройПСложи(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройОтними(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                          ткст0 имя);
ЛЛЗначение LLBuildNSWSub(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                             ткст0 имя);
ЛЛЗначение LLBuildNUWSub(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                             ткст0 имя);
ЛЛЗначение ЛЛСтройПОтними(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройУмножь(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                          ткст0 имя);
ЛЛЗначение LLBuildNSWMul(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                             ткст0 имя);
ЛЛЗначение LLBuildNUWMul(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                             ткст0 имя);
ЛЛЗначение ЛЛСтройПУмножь(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройБДели(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройТочноБДели(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                                ткст0 имя);
ЛЛЗначение ЛЛСтройЗДели(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройТочноЗДели(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                                ткст0 имя);
ЛЛЗначение ЛЛСтройПДели(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение LLBuildURem(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение LLBuildSRem(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение LLBuildFRem(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение LLBuildShl(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение LLBuildLShr(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение LLBuildAShr(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройИ(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                          ткст0 имя);
ЛЛЗначение ЛЛСтройИли(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                          ткст0 имя);
ЛЛЗначение ЛЛСтройИИли(ЛЛПостроитель постр, ЛЛЗначение LHS, ЛЛЗначение RHS,
                          ткст0 имя);
ЛЛЗначение ЛЛСтройБинОп(ЛЛПостроитель постр, ЛЛОпкод оп,
                            ЛЛЗначение LHS, ЛЛЗначение RHS,
                            ткст0 имя);
ЛЛЗначение ЛЛСтройОтриц(ЛЛПостроитель постр, ЛЛЗначение З, ткст0 имя);
ЛЛЗначение LLBuildNSWNeg(ЛЛПостроитель постр, ЛЛЗначение З,
                             ткст0 имя);
ЛЛЗначение LLBuildNUWNeg(ЛЛПостроитель постр, ЛЛЗначение З,
                             ткст0 имя);
ЛЛЗначение ЛЛСтройПОтриц(ЛЛПостроитель постр, ЛЛЗначение З, ткст0 имя);
ЛЛЗначение ЛЛСтройНе(ЛЛПостроитель постр, ЛЛЗначение З, ткст0 имя);

/* Memory */
ЛЛЗначение ЛЛСтройРазместПам(ЛЛПостроитель постр, ЛЛТип тип, ткст0 имя);
ЛЛЗначение ЛЛСтройРазместПамМасс(ЛЛПостроитель постр, ЛЛТип тип,
                                  ЛЛЗначение знач, ткст0 имя);

/**
 * создаёт и вставляет memset в определённый указатель и заданное значение.
 *
 * @see llvm::IRRBuilder::CreateMemSet()
 */
ЛЛЗначение ЛЛСтройУстПам(ЛЛПостроитель постр, ЛЛЗначение укз,
                             ЛЛЗначение знач, ЛЛЗначение длин,
                             бцел расклад);
/**
 * Creates and inserts a memcpy between the specified pointers.
 *
 * @see llvm::IRRBuilder::CreateMemCpy()
 */
ЛЛЗначение ЛЛСтройКопирПам(ЛЛПостроитель постр, 
                             ЛЛЗначение приёмник, бцел DstAlign,
                             ЛЛЗначение исток, бцел раскладИсх,
                             ЛЛЗначение разм);
/**
 * Creates and inserts a memmove between the specified pointers.
 *
 * @see llvm::IRRBuilder::CreateMemMove()
 */
ЛЛЗначение ЛЛСтройПреместПам(ЛЛПостроитель постр, 
                              ЛЛЗначение приёмник, бцел DstAlign,
                              ЛЛЗначение исток, бцел раскладИсх,
                              ЛЛЗначение разм);

ЛЛЗначение ЛЛСтройАллока(ЛЛПостроитель постр, ЛЛТип тип, ткст0 имя);
ЛЛЗначение ЛЛСтройАллокаМасс(ЛЛПостроитель постр, ЛЛТип тип,
                                  ЛЛЗначение знач, ткст0 имя);
ЛЛЗначение ЛЛСтройОсвободи(ЛЛПостроитель постр, ЛЛЗначение значУкз);
// LLBuildLoad is Депрекировано in favor of LLBuildLoad2, in preparation for
// opaque pointer types.
ЛЛЗначение ЛЛСтройЗагрузи(ЛЛПостроитель постр, ЛЛЗначение значУкз,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройЗагрузи2(ЛЛПостроитель постр, ЛЛТип тип,
                            ЛЛЗначение значУкз, ткст0 имя);
ЛЛЗначение ЛЛСтройСохрани(ЛЛПостроитель постр, ЛЛЗначение знач, ЛЛЗначение укз);
// LLBuildGEP, LLBuildInBoundsGEP, and LLBuildStructGEP are Депрекировано in
// favor of LLBuild*GEP2, in preparation for opaque pointer types.
ЛЛЗначение LLBuildGEP(ЛЛПостроитель постр, ЛЛЗначение указатель,
                          ЛЛЗначение *индексы, бцел члоИндексов,
                          ткст0 имя);
ЛЛЗначение LLBuildInBoundsGEP(ЛЛПостроитель постр, ЛЛЗначение указатель,
                                  ЛЛЗначение *индексы, бцел члоИндексов,
                                  ткст0 имя);
ЛЛЗначение LLBuildStructGEP(ЛЛПостроитель постр, ЛЛЗначение указатель,
                                бцел инд, ткст0 имя);
ЛЛЗначение LLBuildGEP2(ЛЛПостроитель постр, ЛЛТип тип,
                           ЛЛЗначение указатель, ЛЛЗначение *индексы,
                           бцел члоИндексов, ткст0 имя);
ЛЛЗначение LLBuildInBoundsGEP2(ЛЛПостроитель постр, ЛЛТип тип,
                                   ЛЛЗначение указатель, ЛЛЗначение *индексы,
                                   бцел члоИндексов, ткст0 имя);
ЛЛЗначение LLBuildStructGEP2(ЛЛПостроитель постр, ЛЛТип тип,
                                 ЛЛЗначение указатель, бцел инд,
                                 ткст0 имя);
ЛЛЗначение ЛЛСтройГлобТкст(ЛЛПостроитель постр, ткст0 текст,
                                   ткст0 имя);
ЛЛЗначение ЛЛСтройГлобТкстУкз(ЛЛПостроитель постр, ткст0 текст,
                                      ткст0 имя);
ЛЛБул ЛЛДайВолатил(ЛЛЗначение инстрДоступаКПам);
проц ЛЛУстВолатил(ЛЛЗначение инстрДоступаКПам, ЛЛБул волатилен_ли);
ЛЛАтомныйПорядок ЛЛДайПорядок(ЛЛЗначение инстрДоступаКПам);
проц ЛЛУстПорядок(ЛЛЗначение инстрДоступаКПам, ЛЛАтомныйПорядок порядок);

// Приведение к типу (касты)

ЛЛЗначение ЛЛСтройОбрежь(ЛЛПостроитель постр, ЛЛЗначение знач,
                            ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройНРасш(ЛЛПостроитель постр, ЛЛЗначение знач,
                           ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройЗРасш(ЛЛПостроитель постр, ЛЛЗначение знач,
                           ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройПЗвБЦ(ЛЛПостроитель постр, ЛЛЗначение знач,
                             ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройПЗвЗЦ(ЛЛПостроитель постр, ЛЛЗначение знач,
                             ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройБЦвПЗ(ЛЛПостроитель постр, ЛЛЗначение знач,
                             ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройЗЦвПЗ(ЛЛПостроитель постр, ЛЛЗначение знач,
                             ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройПЗОбрежь(ЛЛПостроитель постр, ЛЛЗначение знач,
                              ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройПЗРасш(ЛЛПостроитель постр, ЛЛЗначение знач,
                            ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройУкзВЦел(ЛЛПостроитель постр, ЛЛЗначение знач,
                               ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройЦелВУкз(ЛЛПостроитель постр, ЛЛЗначение знач,
                               ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройБитКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                              ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройАдрПрострКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                                    ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройНРасшИлиБитКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                                    ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройЗРасшИлиБитКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                                    ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройОбрежьИлиБитКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                                     ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройКаст(ЛЛПостроитель постр, ЛЛОпкод оп, ЛЛЗначение знач,
                           ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройУказательКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                                  ЛЛТип приёмнТип, ткст0 имя);
ЛЛЗначение ЛЛСтройЦелКаст2(ЛЛПостроитель постр, ЛЛЗначение знач,
                               ЛЛТип приёмнТип, ЛЛБул соЗнаком_ли,
                               ткст0 имя);
ЛЛЗначение ЛЛСтройПЗКаст(ЛЛПостроитель постр, ЛЛЗначение знач,
                             ЛЛТип приёмнТип, ткст0 имя);

/** Депрекировано: This cast is always signed. Use LLBuildIntCast2 instead. */
ЛЛЗначение ЛЛСтройЦелКаст(ЛЛПостроитель постр, ЛЛЗначение знач, /*Signed cast!*/
                              ЛЛТип приёмнТип, ткст0 имя);

/* Comparisons */
ЛЛЗначение ЛЛСтройЦСравн(ЛЛПостроитель постр, ЛЛЦелПредикат оп,
                           ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройПСравн(ЛЛПостроитель постр, ЛЛПредикатРеала оп,
                           ЛЛЗначение LHS, ЛЛЗначение RHS,
                           ткст0 имя);

/* Miscellaneous instructions */
ЛЛЗначение LLBuildPhi(ЛЛПостроитель постр, ЛЛТип тип, ткст0 имя);
// LLBuildCall is Депрекировано in favor of LLBuildCall2, in preparation for
// opaque pointer types.
ЛЛЗначение ЛЛСтройВызов(ЛЛПостроитель постр, ЛЛЗначение фн,
                           ЛЛЗначение *арги, бцел члоАргов,
                           ткст0 имя);
ЛЛЗначение ЛЛСтройВызов2(ЛЛПостроитель постр, ЛЛТип, ЛЛЗначение фн,
                            ЛЛЗначение *арги, бцел члоАргов,
                            ткст0 имя);
ЛЛЗначение ЛЛСтройВыбери(ЛЛПостроитель постр, ЛЛЗначение If,
                             ЛЛЗначение Then, ЛЛЗначение Else,
                             ткст0 имя);
ЛЛЗначение ЛЛСтройВААрг(ЛЛПостроитель постр, ЛЛЗначение список, ЛЛТип тип,
                            ткст0 имя);
ЛЛЗначение ЛЛСтройИзвлекиЭлт(ЛЛПостроитель постр, ЛЛЗначение векторнЗнач,
                                     ЛЛЗначение индекс, ткст0 имя);
ЛЛЗначение ЛЛСтройВставьЭлт(ЛЛПостроитель постр, ЛЛЗначение векторнЗнач,
                                    ЛЛЗначение значЭлта, ЛЛЗначение индекс,
                                    ткст0 имя);
ЛЛЗначение ЛЛСтройШафлВектор(ЛЛПостроитель постр, ЛЛЗначение зн1,
                                    ЛЛЗначение зн2, ЛЛЗначение маска,
                                    ткст0 имя);
ЛЛЗначение ЛЛСтройИзвлекиЗначение(ЛЛПостроитель постр, ЛЛЗначение AggVal,
                                   бцел индекс, ткст0 имя);
ЛЛЗначение ЛЛСтройВставьЗначение(ЛЛПостроитель постр, ЛЛЗначение AggVal,
                                  ЛЛЗначение значЭлта, бцел индекс,
                                  ткст0 имя);
